fixed broken style in firelogger page

--- a/css/site.css
+++ b/css/site.css
@@ -831,7 +831,7 @@ img.binaryage-logo {
     margin-top: 30px;
 }
 
-.more-box-align, .download-row {
+.more-box-align {
     margin-left: 40px;
 }
 
